2022-01-09
+ MINOR
  - Moved the Disccord and GitHub buttons from the top left to the top right to prevent misclicks
  - Added the ability to set a default modpack URL for standard and wizard modpacks
  - TexTools now remembers the path to the last imported file during model import if the default exported model file doesn't exist
  - Added number labels to the colourset editor
+ BUGFIXES
  - Fixed a crash when cancelling modpack creation in the wizard modpack creator

2021-12-08
+ MINOR
  - Added FMV and metadata support for Male Viera
  - Added (de)select all buttons to the wizard modpack importer (Thanks Jason!)
  - Updated offsets for Korean FFXIV version 5.5
+ BUGFIXES
  - Fixed the Companion category

2021-12-03
+ MAJOR
  - Provisional update for Endwalker
  - Viera Male models/textures/etc now viewable/editable.
  
+ KNOWN ISSUES 
  - The Companion section is broken.
  - Metadata settings needs updating for Viera Male
  - FMV and racial scaling needs updating for Viera Male.

+ NOTE
  - This is a temporary initial pre-patch for Endwalker.  More updates will come over this week to bring functionality back to normal.  Mods may or may not currently break the game as we cannot test them yet.

2021-08-14
+ MINOR
  - Updated offsets for Chinese FFXIV version 5.5.

2021-08-03
+ MAJOR
  - A new type of modpack, the backup modpack, has been added. 
     - This modpack allows you to restore your mod list to the same state as when it was created instead of all your mods getting listed under one backup pack. You can create a backup modpack by clicking Mods -> Create Modpack -> Backup Modpack.

+ MINOR
  - You can now opt out of the default model import settings such as Force UV1 to [-1, 1] for gear or User Original Shape Data for faces. TexTools will remember when you check or uncheck the previously always checked boxes.

+ BUGFIXES
  - Fixed a bug where parts of a model were invisible in the model preview under certain conditions.