@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <item>
     <version>2.3.7.3</version>
-    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.7.3b/FFXIV_TexTools_V2.3.7.3b.zip</url>
+    <url>https://github.com/TexTools/FFXIV_TexTools_UI/releases/download/v2.3.7.3/FFXIV_TexTools_V2.3.7.3.zip</url>
     <changelog>https://raw.githubusercontent.com/TexTools/FFXIV_TexTools_Updater/master/changelog_beta.txt</changelog>
     <mandatory mode="2">true</mandatory>
 </item>
